--- a/般若波罗蜜多心经.md
+++ b/般若波罗蜜多心经.md
@@ -1,6 +1,8 @@
 般若波罗蜜多心经
 ================
 
+> 《般若波罗蜜多心经》也称为《摩诃般若波罗蜜多心经》，简称《般若心经》或《心经》，是般若经系列中一部言简义丰、博大精深、提纲挈领、极为重要的经典，为大乘佛教出家及在家佛教徒日常背诵的佛经。现以唐代三藏法师玄奘译本为最流行。
+
 观自在菩萨，行深般若波罗蜜多时，照见五蕴皆空，度一切苦厄。
 
 舍利子，色不异空，空不异色，色即是空，空即是色，受想行识，亦复如是。
